# server/src/main/java/com/corca/ads/demo/product/service/ProductServiceImpl.java
@@ -17,8 +17,10 @@ import lombok.extern.slf4j.Slf4j;
 import java.io.IOException;
 import java.util.List;
 
-/**
- * ProductService 인터페이스의 구현체입니다. 이 서비스는 상품 데이터를 가져오기 위한 역할을 담당하며 Corca Ads API와의 연동과는 관련이 없습니다.
+/*
+ * ProductService 인터페이스의 구현체입니다.
+ * 
+ * 이 서비스는 스토어의 기존 상품 데이터를 가져오거나 상품을 관리하는 역할을 담당하며, 상품 관리시에는 Corca Data API와 연동하여 상품 데이터를 동기화합니다.
  */
 @Slf4j
 @Service
@@ -54,6 +56,14 @@ public class ProductServiceImpl implements ProductService {
     return new PageImpl<>(pageContent, pageable, products.size());
   }
 
+  /*
+   * Corca Data API와 연동하여 상품 데이터를 동기화하는 방식으로는 여러 가지 방법이 있을 수 있습니다.
+   * 
+   * 데모 코드에서는 외부 API의 응답이 기존에 동작하던 스토어의 상품 관리 로직의 성공 여부에 지장을 주지 않도록 이벤트를 발행하는 방식으로 작성되었습니다.
+   * 
+   * 연동 실패 시에는 메세지 큐 등을 활용하여 적절히 재시도를 하는 것을 권장드립니다.
+   */
+
   @Override
   public ProductDTO createProduct(ProductDTO product) {
     // 주석으로 스토어의 DB에 단일 상품을 추가하는 코드를 대체합니다.
@@ -79,7 +89,7 @@ public class ProductServiceImpl implements ProductService {
 
     eventPublisher.publishEvent(ProductEvent.createSingleEvent(EventType.PRODUCT_UPDATED, product));
 
-    return this.getProduct(productId);
+    return product;
   }
 
   @Override
